fix signup page alignment

--- a/HTML_CSS_Assignment/Extra_Html_Css_Assignments/06_Project- Data Analytics Landing Page/style.css
+++ b/HTML_CSS_Assignment/Extra_Html_Css_Assignments/06_Project- Data Analytics Landing Page/style.css
@@ -280,6 +280,9 @@ nav{
     display: flex;
     align-items: center;
     gap: 20px;
+    color: gray;
+    font-size: 1.1rem;
+    font-weight: bold;
 }
 .trusted-hr{
     width: 35%;
@@ -293,20 +296,23 @@ nav{
     display: flex;
     align-items: center;
     gap: 200px;
-    padding: 50px 0;
+    padding: 40px 0;
 }
 /* signup right */
 .sign-bg{
     background-color: #f4ebff;
     position: relative;
+    width: 100%;
+    height: 100%;
 }
 .signup-main{
     background-color: white;
     width: 90%;
     margin: auto;
-    /* position: absolute;
-    left: auto;
-    right: auto; */
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -30px;
 }
 .signup-right-heading{
     text-align: center;
@@ -317,11 +323,11 @@ nav{
     background-color: #722ed1;
     color: white;
     width: 80%;
-    margin-top: 20px;
+    margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    padding: 10px 0;
+    padding: 15px 0;
     border-radius: 5px;
     font-weight: bold;
     letter-spacing: 1px;
@@ -332,7 +338,7 @@ nav{
     margin-top: 20px;
 }
 .signup-input input{
-    height: 40px;
+    height: 50px;
     padding: 5px;
     width: 80%;
     border-radius: 5px;
@@ -349,6 +355,7 @@ nav{
 .signup-google{
     text-align: center;
     padding: 10px 0;
+    cursor: pointer;
 }
 .signup-hr{
     width: 80%;
